--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ body {
     background-color: white;
     width: 40px;
     height: 40px;
+    border: 1px solid black;
     margin-right: 4px;
     display: inline-block;
 }
