--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
   background-color: blueviolet;
+  background-image: url("./images/bg.webp");
 }
 
 .color {
@@ -11,9 +12,10 @@ body {
 }
 
 #pixel-board {
-  margin-top: 10px;
-  width: 210px;
+  margin-top: 40px;
   line-height: 0px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 #pixel-board .pixel {
@@ -22,4 +24,35 @@ body {
   height: 40px;
   border: 1px solid black;
   display: inline-block;
+}
+
+main {
+    text-align: center;
+}
+
+#title {
+    text-align: center;
+    color: white;
+    width: 300px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    border: 3px solid white;
+}
+
+#config {
+    margin-top: 35px;
+}
+
+#board-size {
+    width: 35px;
+}
+
+#color-palette {
+    margin-top: 35px;
+}
+
+.selected {
+    color: white;
 }
